Mon Jun  9 15:07:45 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/jbi/client/JbiEvent.java:
        * cuts/java/jbi/client/JbiSink.java:
        * cuts/java/jbi/client/JbiSource.java:

          Removed all the (un)marshalling code to the sink and
          source class.

        * cuts/cuts.java.jbi.client.build:
        * etc/ANT/include/castor.build:
        
          The location of the Castor libraries directory changed
          from 'libs' to 'lib'.

Mon Jun  9 00:28:26 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:

          Bug fix where the JbiEvents on the upcall methods for sinks
          was missing the appropriate parameter type (i.e., the event
          type).

Sun Jun  8 23:55:18 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.h:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:

          Updated the generator to use the new parameterized JbiEvent
          class type.

        * cuts/java/jbi/client/JbiEvent.java:
        * cuts/java/jbi/client/JbiSource.java:
        * cuts/cuts.java.jbi.client.build:
        * etc/ANT/include/cuts.build:

          The JbiEvent class is now a generic class that is parameterized
          by the event type.

Sun Jun  8 20:02:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/BE_Impl_Node.h:

          It is now possible to store string sets in the implementation
          node. This is useful when you need to store information about
          the implementation that may be useful to the project and
          workspace generators.

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.h:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Project_Generators.h:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Project_Generators.cpp:
